# QueryIQ

./: README.md  forex_data.csv  main.py  pdf_handler.py  pyproject.toml
