[project]
name = "queryiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "google-generativeai>=0.8.5",
    "hnswlib>=0.8.0",
    "numpy>=2.3.4",
    "pdfplumber>=0.11.8",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
